{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 70,
  "lineage": "2f53dd5d-d848-dff5-3407-00e53c765192",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05ffe3c48a9991133",
            "arn": "arn:aws:ec2:us-east-1:565150679715:instance/i-00b0a32c633e47e4c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b0a32c633e47e4c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06eb4f984c0f792cf",
            "private_dns": "ip-10-0-1-240.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.240",
            "public_dns": "ec2-98-84-101-242.compute-1.amazonaws.com",
            "public_ip": "98.84.101.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0aeb0f70b4aac25c3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b9af102b602b8dfd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb4f217054e44cbb",
            "tags": {
              "Name": "DockerBakeryApp"
            },
            "tags_all": {
              "Name": "DockerBakeryApp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b9af102b602b8dfd"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565150679715:internet-gateway/igw-0ea1ea23798c556c6",
            "id": "igw-0ea1ea23798c556c6",
            "owner_id": "565150679715",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-01392b5439ee5e50f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565150679715:route-table/rtb-02e4084192622f3d1",
            "id": "rtb-02e4084192622f3d1",
            "owner_id": "565150679715",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-rtb-private1-us-east-1a"
            },
            "tags_all": {
              "Name": "main-rtb-private1-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-01392b5439ee5e50f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565150679715:route-table/rtb-0c531bc8d70dafd0f",
            "id": "rtb-0c531bc8d70dafd0f",
            "owner_id": "565150679715",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-rtb-private2-us-east-1b"
            },
            "tags_all": {
              "Name": "main-rtb-private2-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-01392b5439ee5e50f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565150679715:route-table/rtb-0f72cf3d182e6384f",
            "id": "rtb-0f72cf3d182e6384f",
            "owner_id": "565150679715",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ea1ea23798c556c6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-rtb-public"
            },
            "tags_all": {
              "Name": "main-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-01392b5439ee5e50f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rtb_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f22c37821703426f",
            "route_table_id": "rtb-02e4084192622f3d1",
            "subnet_id": "subnet-02761cc5caffd5b49"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rtb_1",
            "aws_subnet.private_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rtb_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08af3a0a48f1c40f7",
            "route_table_id": "rtb-0c531bc8d70dafd0f",
            "subnet_id": "subnet-0c45bbe374d5a6909"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rtb_2",
            "aws_subnet.private_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rtb_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081db02a82f3b4c27",
            "route_table_id": "rtb-0f72cf3d182e6384f",
            "subnet_id": "subnet-0cb4f217054e44cbb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_rtb",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rtb_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a18b130511751cdd",
            "route_table_id": "rtb-0f72cf3d182e6384f",
            "subnet_id": "subnet-028ccf47520e3494d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_rtb",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565150679715:security-group/sg-0575fedab254395ef",
            "description": "Allow MySQL inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0575fedab254395ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-mysql-sg",
            "name_prefix": "",
            "owner_id": "565150679715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MySQL RDS Security Group"
            },
            "tags_all": {
              "Name": "MySQL RDS Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-01392b5439ee5e50f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565150679715:security-group/sg-0b9af102b602b8dfd",
            "description": "Allow HTTP and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b9af102b602b8dfd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "113.210.105.191/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "565150679715",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01392b5439ee5e50f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565150679715:subnet/subnet-02761cc5caffd5b49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02761cc5caffd5b49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565150679715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-subnet-private1-us-east-1a"
            },
            "tags_all": {
              "Name": "main-subnet-private1-us-east-1a"
            },
            "vpc_id": "vpc-01392b5439ee5e50f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565150679715:subnet/subnet-0c45bbe374d5a6909",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c45bbe374d5a6909",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565150679715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-subnet-private2-us-east-1b"
            },
            "tags_all": {
              "Name": "main-subnet-private2-us-east-1b"
            },
            "vpc_id": "vpc-01392b5439ee5e50f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565150679715:subnet/subnet-0cb4f217054e44cbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb4f217054e44cbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565150679715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-subnet-public1-us-east-1a"
            },
            "tags_all": {
              "Name": "main-subnet-public1-us-east-1a"
            },
            "vpc_id": "vpc-01392b5439ee5e50f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565150679715:subnet/subnet-028ccf47520e3494d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028ccf47520e3494d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "565150679715",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-subnet-public2-us-east-1b"
            },
            "tags_all": {
              "Name": "main-subnet-public2-us-east-1b"
            },
            "vpc_id": "vpc-01392b5439ee5e50f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565150679715:vpc/vpc-01392b5439ee5e50f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c458cba93197a289",
            "default_route_table_id": "rtb-0bb01333fff9fdade",
            "default_security_group_id": "sg-090fbbc91d10120ce",
            "dhcp_options_id": "dopt-0f8d4e9af81fe18cc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01392b5439ee5e50f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bb01333fff9fdade",
            "owner_id": "565150679715",
            "tags": {
              "Name": "bakery-vpc"
            },
            "tags_all": {
              "Name": "bakery-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "main_vpce_s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565150679715:vpc-endpoint/vpce-03eeb530328a995be",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-03eeb530328a995be",
            "owner_id": "565150679715",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-02e4084192622f3d1",
              "rtb-0c531bc8d70dafd0f"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "main-vpce-s3"
            },
            "tags_all": {
              "Name": "main-vpce-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01392b5439ee5e50f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rtb_1",
            "aws_route_table.private_rtb_2",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}